--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
-selenium==4.1.2
+boto3==1.21.13
+pandas==1.4.1
+selenium==4.1.3
+setuptools==58.0.4
+SQLAlchemy==1.4.27
+tqdm==4.62.3
 webdriver_manager==3.5.3
