--- a/setup.cfg
+++ b/setup.cfg
@@ -6,5 +6,11 @@ description-file = README.md
 [options]
 packages = find:
 install_requires =
+    boto3
+    pandas
     selenium
+    setuptools
+    SQLAlchemy
+    tqdm
     webdriver_manager
+    psycopg2-binary
